--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://erdem:AHVoOZHyDMgbzkJT@cluster0.fo52wem.mongodb.net/foodmine?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://erdem:teSxOseClHkCxXjo@cluster0.fo52wem.mongodb.net/foodmine?retryWrites=true&w=majority
