--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://hikmeterdemiral:JBoDgfcGnF7TnEYG@cluster0.apkcyjx.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://erdem:Hm1hgfGVjkD3tV17@cluster0.fo52wem.mongodb.net/?retryWrites=true&w=majority
